# screenshot-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-25-screenshot-mcp-implementation.md
docs/superpowers/specs/: 2026-03-25-screenshot-mcp-design.md
src/screenshot_mcp/: server.py  utils.py
src/screenshot_mcp/platform/: base.py  wayland.py  x11.py
tests/: test_platform_detection.py  test_server.py  test_wayland.py  test_x11.py
