[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot-mcp"
version = "0.1.0"
description = "MCP server for screenshots on Linux"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
screenshot-mcp = "screenshot_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
